--- a/src/components/Editor/index.scss
+++ b/src/components/Editor/index.scss
@@ -1,9 +1,14 @@
 .container {
   position: absolute;
   left: 0;
-  top: 45px;
+  top: 0;
   right: 0;
   bottom: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.editorWrapper {
   width: 100%;
   height: 100%;
 }
