--- a/src/components/Toolbar/index.scss
+++ b/src/components/Toolbar/index.scss
@@ -3,4 +3,16 @@
   height: 42px;
   padding: 8px 0px;
   box-shadow: 0px 8px 12px 0px rgba(0, 52, 107, 0.04);
+  background: #fff;
+  border-bottom: 1px solid #e6e9ed;
+}
+
+.icon {
+  width: 27px;
+  height: 27px;
+  color: rgba(0, 0, 0, 0.25);
+}
+
+.command {
+  display: inline-block;
 }
