--- a/src/components/Toolbar/index.scss
+++ b/src/components/Toolbar/index.scss
@@ -1,18 +1,23 @@
 .toolbar {
   width: 100%;
-  height: 42px;
+  height: 45px;
   padding: 8px 0px;
   box-shadow: 0px 8px 12px 0px rgba(0, 52, 107, 0.04);
   background: #fff;
   border-bottom: 1px solid #e6e9ed;
-}
-
-.icon {
-  width: 27px;
-  height: 27px;
-  color: rgba(0, 0, 0, 0.25);
+  padding: 8px;
 }
 
 .command {
   display: inline-block;
+  i {
+    display: inline-block;
+    width: 27px;
+    height: 27px;
+    line-height: 27px;
+    text-align: center;
+    font-size: 18px;
+    margin: 0 6px;
+    cursor: pointer;
+  }
 }
